<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cardviewProfile"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:background="@drawable/grad"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <RelativeLayout
                        android:id="@+id/relativeLayoutImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="20dp"
                        android:background="@drawable/circle_border"

                        >

                        <ImageView
                            android:id="@+id/etImageViewProfile"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="9dp"
                            android:layout_marginTop="9dp"
                            android:layout_marginEnd="9dp"
                            android:layout_marginBottom="9dp"
                            android:adjustViewBounds="true"
                            android:background="@drawable/circle"
                            android:padding="4dp"
                            android:src="@drawable/hat" />

                    </RelativeLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tvNameInput"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="-61dp"
                        android:layout_toRightOf="@id/relativeLayoutImage"
                        android:hint="@string/Name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@+id/tvNameInput"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tvEmailInput"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvNameInput"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="-61dp"
                        android:layout_toRightOf="@id/relativeLayoutImage"
                        android:gravity="right"
                        android:layout_centerHorizontal="true"
                        android:hint="@string/Email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                             />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/phoneNo"
                        android:id="@+id/tvtPhoneInput"
                        android:layout_below="@id/tvEmailInput"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="-61dp"
                        android:layout_toRightOf="@id/relativeLayoutImage"
                        android:gravity="right"
                        android:layout_centerHorizontal="true"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                             />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/Region"
                        android:layout_below="@id/tvtPhoneInput"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="-61dp"
                        android:layout_toRightOf="@id/relativeLayoutImage"
                        android:gravity="right"
                        android:layout_centerHorizontal="true"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etRegion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                             />

                    </com.google.android.material.textfield.TextInputLayout>


                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:id="@+id/cardviewEmergencyContact"
                android:layout_below="@+id/cardviewProfile"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:id="@+id/relativeLY1"
                    android:layout_below="@+id/relativeLY1"
                    >

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emergeCont1NameInput"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmergeCont1Name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10sp"
                            android:layout_marginTop="5dp"
                             />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emergeCont1PhoneInput"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/emergeCont1NameInput"
                        android:hint="@string/phoneNo">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmergeCont1Phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10sp"
                            android:layout_marginTop="5dp"
                             />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emergeCont1relationshipInput"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/emergeCont1PhoneInput"
                        android:hint="@string/relationship">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmergeCont1relationship"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10sp"
                            android:layout_marginTop="5dp"
                             />

                    </com.google.android.material.textfield.TextInputLayout>


                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cardviewEmergencyContact2"
                android:layout_below="@+id/cardviewEmergencyContact"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:id="@+id/relativeLY2">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/Name"
                        android:id="@+id/emergeCont2NameInput"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmergeCont2Name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10sp"
                            android:layout_marginTop="5dp"
                            />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/emergeCont2NameInput"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/phoneNo"
                        android:id="@+id/emergeCont2PhoneInput"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmergeCont2Phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10sp"
                            android:layout_marginTop="5dp"
                             />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/emergeCont2PhoneInput"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/relationship"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmergeCont2Relationship"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10sp"
                            android:layout_marginTop="5dp"
                             />

                    </com.google.android.material.textfield.TextInputLayout>


                   <!-- <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:layout_below="@+id/emergeCont2Relationship"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etemergeCont2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/reset_pass"/>

                    </com.google.android.material.textfield.TextInputLayout>
                    &&&&&&&########
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint=""
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width=""
                            android:layout_height="" />

                    </com.google.android.material.textfield.TextInputLayout>-->

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </RelativeLayout>

        <Button
            android:id="@+id/btnUpdateprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="67dp"
            android:layout_marginBottom="6dp"
            android:text="@string/updateProfile" />

        <Button
            android:id="@+id/btnCancelEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="43dp"
            android:layout_marginBottom="4dp"
            tools:text="@string/cancel" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>